--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,7 @@
 
 export(BatchRemove)
 export(CellCycleView)
-export(CutoffCalling)
+export(CorrView)
 export(DensityDiffView)
 export(DensityView)
 export(EnrichedGSEView)
@@ -10,13 +10,16 @@ export(EnrichedView)
 export(FluteMLE)
 export(FluteRRA)
 export(HeatmapView)
+export(IdentBarView)
 export(KeggPathwayView)
 export(MAView)
+export(MapRatesView)
 export(NormalizeBeta)
 export(RankView)
 export(ReadBeta)
 export(ReadRRA)
 export(ScatterView)
+export(Selector)
 export(SquareView)
 export(TransGeneID)
 export(ViolinView)
@@ -27,26 +30,29 @@ export(enrich.HGT)
 export(enrich.ORT)
 export(enrichment_analysis)
 export(getOrg)
-export(loginfo)
 export(normalize.loess)
 import(Category)
+import(DOSE)
 import(GOstats)
+import(biomaRt)
 import(clusterProfiler)
+import(data.table)
 import(ggplot2)
+import(ggsci)
 import(grDevices)
+import(grid)
 import(gridExtra)
 import(pathview)
 import(pheatmap)
 import(stats)
 import(utils)
 importFrom(data.table,fread)
+importFrom(data.table,melt)
 importFrom(ggExtra,ggMarginal)
 importFrom(ggrepel,geom_label_repel)
 importFrom(ggrepel,geom_text_repel)
 importFrom(ggsci,scale_color_npg)
 importFrom(grDevices,colorRampPalette)
 importFrom(grid,grid.raster)
-importFrom(pathological,temp_dir)
 importFrom(png,readPNG)
-importFrom(reshape,melt)
 importFrom(sva,ComBat)
