--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,8 @@ Package: MAGeCKFlute
 Type: Package
 Title: Integrative analysis pipeline for pooled CRISPR functional
         genetic screens
-Version: 1.4.2
-Date: 2019-7-11
+Version: 1.4.3
+Date: 2019-8-6
 Author: Wubing Zhang, Feizhen Wu, Binbin Wang
 Maintainer: Wubing Zhang<Watson5bZhang@gmail.com>
 Description: MAGeCKFlute is designed to surporting downstream analysis, utilizing the gene summary data provided through MAGeCK or MAGeCK-VISPR. Quality control, normalization, and screen hit identification for CRISPR screen data are performed in pipeline. Identified hits within the pipeline are categorized based on experimental design, and are subsequently interpreted by functional enrichment analysis.
@@ -19,4 +19,4 @@ biocViews: Software, FunctionalGenomics, CRISPR, ImmunoOncology,
         BatchEffect, QualityControl, Normalization, GeneSetEnrichment,
         Pathways, Visualization
 RoxygenNote: 6.1.1
-
+Packaged: 2019-08-08 02:50:47 UTC; Wubing
