--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ export(enrich.GSE)
 export(enrich.HGT)
 export(enrich.ORT)
 export(getOrg)
+export(gsGetter)
 export(normalize.loess)
 export(sgRankView)
 import(DOSE)
